Add AUTHORS and UNLICENSE

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "k_archives",
-    "unarchive",
-]
+members = ["k_archives", "unarchive"]
 
 [profile.release]
 lto = true
